--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,22 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # نسخة مستقرة جداً لبناء أندرويد
+
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install System Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+          pip3 install --user --upgrade Cython==0.29.33 buildozer
+
       - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
-        with:
-          command: buildozer android debug
-          buildozer_version: master
+        run: |
+          export PATH=$PATH:$HOME/.local/bin
+          # هذا الأمر سيقوم بالرد بـ "نعم" تلقائياً على كل شروط أندرويد
+          yes | buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
