--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,37 @@
 name: Build Android APK
 on:
-  workflow_dispatch:
+  workflow_dispatch: # يسمح لك بتشغيل البناء يدوياً من تبويب Actions
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04 # نسخة النظام المستقرة لبناء تطبيقات أندرويد
 
     steps:
       - uses: actions/checkout@v4
 
+      # إعداد جافا 17 الضرورية لبناء تطبيقات أندرويد الحديثة
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # تثبيت كل المكتبات التي يحتاجها Buildozer للعمل
       - name: Install System Dependencies
         run: |
           sudo apt update
           sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
           pip3 install --user --upgrade Cython==0.29.33 buildozer
 
+      # عملية البناء الفعلي (بدون أمر clean لتجنب الأخطاء السابقة)
       - name: Build with Buildozer
         run: |
           export PATH=$PATH:$HOME/.local/bin
-          # قبول التراخيص وتنظيف البيئة قبل البدء
-          yes | buildozer android clean
+          # سيقوم هذا الأمر بتحميل الـ SDK والـ NDK والبدء في صنع الـ APK
           yes | buildozer -v android debug
         continue-on-error: false
 
+      # رفع ملف الـ APK الناتج ليكون جاهزاً للتحميل
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
